kube-manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nyyupay
  name: postgres
spec:
  type: ExternalName
  externalName: nyyupay.ceamymnsziie.eu-central-1.rds.amazonaws.com
