kube-manifests/nyyupay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nyyupay
  name: deployment-nyyupay
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nyyupay
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nyyupay
    spec:
      containers:
      - name: nyyupay
        image: 469754134024.dkr.ecr.eu-central-1.amazonaws.com/nyyupay:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: nyyupay
  name: service-nyyupay
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nyyupay
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nyyupay
  name: ingress-nyyupay
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /health-check
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:469754134024:certificate/5b8cec63-3d1f-4b56-b168-2d004d8e880f
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-nyyupay
              port:
                number: 80
